--- a/PROJECT-REACT-JAVA/Barber_Booking/index.html
+++ b/PROJECT-REACT-JAVA/Barber_Booking/index.html
@@ -8,7 +8,7 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Booking Barber </title>
 </head>
 
 <body>
